# Flask-Squeeze

./: Flask-Squeeze.code-workspace  LICENSE  Pipfile  README.md  cli.sh  flask_squeeze.py  justfile  pyproject.toml  readme.md  setup.py  test.py
.github/workflows/: test.yml
assets/: logo-squeeze.afdesign
flask-squeeze/: __init__.py
flask_squeeze/: __init__.py  cache.py  compress.py  debug.py  debugging.py  flask_squeeze.py  log.py  logger.py  logging.py  minifiers.py  minify.py  models.py  utils.py
testing/: app.py
testing/static/: main.css  main.js
testing/templates/: index.html
tests/: runtests.sh  test_compress.py  test_flask_squeeze.py  test_minify.py
tests/test_app/: __init__.py
tests/test_app/main/: __init__.py  routes.py
tests/test_app/main/templates/: index.html
tests/test_app/static/: semantic.min.css  semantic2.5.0.min.css  smallfile.js  text.txt
tests/test_app/templates/: index.html
