[project]
name = "flask-squeeze"
version = "3.1.0"
description = "Compress and minify Flask responses!"
readme = "README.md"
authors = [{ name = "Marcel Kröker", email = "kroeker.marcel@gmail.com" }]
license = { file = "LICENSE" }
classifiers=[
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Intended Audience :: Developers",
	"Programming Language :: Python",
	"Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.8, <3.14"
dependencies = [
    "flask>=1",
    "brotli~=1.1",
    "rjsmin~=1.2",
    "rcssmin~=1.2",
]


[dependency-groups]
dev = [
    "pytest-cov ~= 4.0.0",
]


[tool.setuptools]
packages = ["flask_squeeze"]
license-files = [] # Workaround for https://github.com/astral-sh/uv/issues/9513


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[tool.ruff]
show-fixes = true
line-length = 120
select = [
	"ANN", # annotations
    "B", # bugbear
    "C", # comprehensions
    "E", # style errors
    "F", # flakes
    "I", # import sorting
    "M", # meta
    "N", # naming
    "U", # upgrade
    "W", # style warnings
    "YTT", # sys.version
]
ignore = [
	"ANN101", # missing type annotation for self
    "ANN202", # Missing return type annotation for private function
	"E501", # line length
	"UP006", # use Dict (not possible in python 3.8)
	"UP007", # use X | Y for union (not possible in python 3.8)
    "UP035", # use typing Dict and List (not possible in python 3.8)
    "W191", # indentation contains tabs
]

[tool.ruff.format]
indent-style = "tab"
quote-style = "double"
